--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanners.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanners.html
@@ -185,7 +185,7 @@
         </div>
 
       {% else %}
-        <p>{% trans "No scannerjob added" %}</p>
+        <p class="hint-text">{% trans "No scannerjob added" %}</p>
       {% endif %}
     </div>
   </main>
