[#58152] Tweak the (S)CSS definitions for forms a bit
We're going to need to ceremonially burn down much of our CSS before long,
I fear: definitions step on one another's toes all the time at this point.
But this tweak makes the rule builder work again without breaking the
organisation form, so for now I declare victory

--- a/src/os2datascanner/projects/static/scss/_vars.scss
+++ b/src/os2datascanner/projects/static/scss/_vars.scss
@@ -14,6 +14,7 @@
 
   //primary colors
   --color-body-bg: #fcfcfc;
+  --color-disabled-widget-bg: #f0f0f0;
   --color-widget-bg: #fff;
   --color-main: #3a69b4;
   --color-main-dark: #1c417d;
