--- a/src/os2datascanner/projects/admin/adminapp/templates/components/admin_widgets/rule_builder.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/admin_widgets/rule_builder.html
@@ -32,6 +32,8 @@
       <option value="CustomRule_Name">{% trans "names" %}</option>
       <option value="CustomRule_Address">{% trans "address" %}</option>
       <option value="EmailHeader">{% trans "e-mail header" %}</option>
+      <option value="PassportRule">{% trans "passport" %}</option>
+      <option value="SickLeaveRule">{% trans "sick leave" %}</option>
       <optgroup label="{% trans "Experimental" %}">
         <option value="TurboCPRRule">{% trans "CPR-nr. (Turbo)" %}</option>
         <option value="TurboHealthRule">{% trans "health information (Turbo)" %}</option>
@@ -115,6 +117,7 @@
     </span>
   </span>
   <span id="PassportRule"></span>
+  <span id="SickLeaveRule"></span>
   <span id="TurboCPRRule">
     ({% trans "with" %}
     <label>
