--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/error_log.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/error_log.html
@@ -21,7 +21,7 @@
 
       {% include "os2datascanner/scanner_tabs.html" with page="scan-status" %}
 
-      <div class="aside">
+      <div class="content-header">
         <h1 class="page-title">{% trans "Error Log" %}</h1>
       </div>
 
