--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scan_status_table.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scan_status_table.html
@@ -121,7 +121,7 @@
       </table>
     </div>
   {% else %}
-    <p>{% trans "no ongoing scans"|capfirst %}</p>
+    <p class="no-results">{% trans "no ongoing scans"|capfirst %}</p>
   {% endif %}
   {% comment %} <div class="progressbar-container">
     <div id="scanstatus-progressbar" class="progressbar" style="width:50%"></div>
