--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scan_status.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scan_status.html
@@ -17,7 +17,7 @@
 
       {% include "os2datascanner/scanner_tabs.html" with page="scan-status"  %}
 
-      <div class="aside">
+      <div class="content-header">
         <h1 class="page-title">{% trans "Scans in progress" %}</h1>
       </div>
  
